# kimaier

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml  rust.yml
assets/: kimaier-latest.json
src/: App.vue  index.html  main.js  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon-pause.icns  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utils/: config.rs  mod.rs
src/assets/css/: style.css
src/components/: Control.vue  Footer.vue  Register.vue  Settings.vue  Statistics.vue
src/helpers/: helper.ts
src/stores/: main.ts
temp/: index.html  main.js
