[package]
name = "kimaier"
version = "0.1.2"
description = "Simple desktop time tracker, based on kimai backend"
authors = ["Jonathan Bäcker <jonbae77@gmail.com>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
preferences = { git = "https://github.com/andybarron/preferences-rs.git" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open", "system-tray"] }
tauri-plugin-positioner = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
strip = true
lto = true
